--- a/test/index.html
+++ b/test/index.html
@@ -11,10 +11,9 @@
 
 <body>
   <div id="app">
-    <p>TEST</p>
+    <button>测试</button>
   </div>
-  <script src="./index.ts"></script>
+  <script src="./index.js"></script>
 </body>
-
 
 </html>
